Completed most functionalities for carousel, 1 bug pending where going from 2 to 3 causes issue in z-index (without old-zindex) issue was in 3 to 1

--- a/src/components/layout/home/Home.scss
+++ b/src/components/layout/home/Home.scss
@@ -1,4 +1,15 @@
 .home {
+    &-carousel {
+        &__wrap {
+            padding: 7rem 0 3rem;
+            min-height: 20rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow-x: clip;
+
+        }
+    }
     &-cube {
         &__wrap {
             position: relative;
